"""
Audio Service - gRPC service for audio generation

Handles all audio-related AI integrations:
- MusicGen for background music generation
- ElevenLabs for text-to-speech voiceover
- Azure Speech for text-to-speech
- Amazon Polly for text-to-speech

This service exposes a gRPC interface for the Go API Gateway.
"""

import argparse
import asyncio
import uuid
from pathlib import Path
from typing import Optional

import structlog

logger = structlog.get_logger(__name__)

# gRPC imports (optional, gracefully handle if not installed)
try:
    import grpc

    GRPC_AVAILABLE = True
except ImportError:
    GRPC_AVAILABLE = False
    logger.warning("gRPC not available. Install with: pip install grpcio grpcio-tools")


# Estimated milliseconds per character for TTS duration estimation
# Based on average speaking rate of ~150 words per minute (~3 chars/sec)
ESTIMATED_MS_PER_CHAR = 50


class AudioProvider:
    """Base class for audio generation providers."""

    def __init__(self, api_key: Optional[str] = None):
        self.api_key = api_key

    async def generate(self, **kwargs) -> dict:
        """Generate audio."""
        raise NotImplementedError


class MusicGenProvider(AudioProvider):
    """MusicGen (Meta) music generation provider."""

    async def generate_music(
        self,
        prompt: str,
        duration_seconds: int = 15,
        tempo: float = 90.0,
        mood: str = "lo-fi chill",
    ) -> dict:
        """Generate music using MusicGen (placeholder)."""
        logger.info(
            "MusicGenProvider generating",
            prompt=prompt[:50] if prompt else "",
            duration=duration_seconds,
        )
        # Placeholder - in production, call MusicGen model
        return {
            "job_id": str(uuid.uuid4()),
            "status": "completed",
            "audio_url": f"/output/audio/musicgen_{uuid.uuid4().hex[:8]}.wav",
            "duration_ms": duration_seconds * 1000,
            "provider": "musicgen",
        }


class ElevenLabsProvider(AudioProvider):
    """ElevenLabs text-to-speech provider."""

    async def generate_voiceover(
        self,
        text: str,
        voice: str = "Adam",
        model: str = "eleven_multilingual_v2",
        speed: float = 1.0,
    ) -> dict:
        """Generate voiceover using ElevenLabs (placeholder)."""
        logger.info(
            "ElevenLabsProvider generating", text=text[:50] if text else "", voice=voice
        )
        # Placeholder - in production, call ElevenLabs API
        # Example from architecture:
        # audio = elevenlabs.generate(
        #     text=request.prompt,
        #     voice="Adam",
        #     model="eleven_multilingual_v2"
        # )
        return {
            "job_id": str(uuid.uuid4()),
            "status": "completed",
            "audio_url": f"/output/audio/elevenlabs_{uuid.uuid4().hex[:8]}.mp3",
            "duration_ms": len(text) * ESTIMATED_MS_PER_CHAR,
            "provider": "elevenlabs",
        }


class AzureSpeechProvider(AudioProvider):
    """Azure Speech text-to-speech provider."""

    async def generate_voiceover(
        self,
        text: str,
        voice: str = "en-US-JennyNeural",
        speed: float = 1.0,
    ) -> dict:
        """Generate voiceover using Azure Speech (placeholder)."""
        logger.info(
            "AzureSpeechProvider generating", text=text[:50] if text else "", voice=voice
        )
        # Placeholder - in production, call Azure Speech API
        return {
            "job_id": str(uuid.uuid4()),
            "status": "completed",
            "audio_url": f"/output/audio/azure_{uuid.uuid4().hex[:8]}.wav",
            "duration_ms": len(text) * ESTIMATED_MS_PER_CHAR,
            "provider": "azure_speech",
        }


class AmazonPollyProvider(AudioProvider):
    """Amazon Polly text-to-speech provider."""

    async def generate_voiceover(
        self,
        text: str,
        voice: str = "Matthew",
        speed: float = 1.0,
    ) -> dict:
        """Generate voiceover using Amazon Polly (placeholder)."""
        logger.info(
            "AmazonPollyProvider generating", text=text[:50] if text else "", voice=voice
        )
        # Placeholder - in production, call Amazon Polly API
        return {
            "job_id": str(uuid.uuid4()),
            "status": "completed",
            "audio_url": f"/output/audio/polly_{uuid.uuid4().hex[:8]}.mp3",
            "duration_ms": len(text) * ESTIMATED_MS_PER_CHAR,
            "provider": "amazon_polly",
        }


class AudioServicer:
    """
    Audio Service gRPC Implementation.

    Handles audio generation requests from the Go API Gateway.
    """

    def __init__(self, output_dir: str = "./output"):
        self.output_dir = Path(output_dir)
        self.output_dir.mkdir(parents=True, exist_ok=True)

        # Initialize providers
        self.music_provider = MusicGenProvider()
        self.tts_providers = {
            "elevenlabs": ElevenLabsProvider(),
            "azure_speech": AzureSpeechProvider(),
            "amazon_polly": AmazonPollyProvider(),
        }

        # Job tracking
        self.jobs: dict[str, dict] = {}

        logger.info(
            "AudioServicer initialized",
            tts_providers=list(self.tts_providers.keys()),
        )

    async def generate_music(self, request: dict) -> dict:
        """
        Handle music generation request.

        Args:
            request: Music generation request with params like tempo, mood, duration.

        Returns:
            Music generation response with job_id, status, and audio URL.
        """
        job_id = str(uuid.uuid4())
        params = request.get("params", {})

        logger.info(
            "AudioServicer.generate_music",
            job_id=job_id,
            mood=params.get("mood", "lo-fi chill"),
        )

        # Store job
        self.jobs[job_id] = {
            "status": "processing",
            "request": request,
            "type": "music",
            "created_at": asyncio.get_event_loop().time(),
        }

        try:
            # Build prompt from params
            prompt = (
                f"{params.get('mood', 'lo-fi chill')} music, "
                f"{params.get('tempo', 90)} BPM, "
                f"{params.get('key', 'C minor')}, "
                f"energy level {params.get('energy', 0.4):.1f}"
            )

            result = await self.music_provider.generate_music(
                prompt=prompt,
                duration_seconds=request.get("duration_seconds", 15),
                tempo=params.get("tempo", 90.0),
                mood=params.get("mood", "lo-fi chill"),
            )

            # Update job
            self.jobs[job_id].update(
                {
                    "status": "completed",
                    "result": result,
                }
            )

            return {
                "job_id": job_id,
                "status": "completed",
                "audio_url": result.get("audio_url"),
                "quality_score": 0.85,
                "duration_ms": result.get("duration_ms", 15000),
            }

        except Exception as e:
            logger.error("Music generation failed", job_id=job_id, error=str(e))
            self.jobs[job_id]["status"] = "failed"
            self.jobs[job_id]["error"] = str(e)

            return {
                "job_id": job_id,
                "status": "failed",
                "error_message": str(e),
            }

    async def generate_voiceover(self, request: dict) -> dict:
        """
        Handle voiceover generation request.

        Args:
            request: Voiceover request with text, voice, and provider.

        Returns:
            Voiceover response with job_id, status, and audio URL.
        """
        job_id = str(uuid.uuid4())
        text = request.get("text", "")
        voice = request.get("voice", "Adam")
        provider_name = request.get("provider", "elevenlabs")

        logger.info(
            "AudioServicer.generate_voiceover",
            job_id=job_id,
            provider=provider_name,
            text_length=len(text),
        )

        # Store job
        self.jobs[job_id] = {
            "status": "processing",
            "request": request,
            "type": "voiceover",
            "created_at": asyncio.get_event_loop().time(),
        }

        try:
            provider = self.tts_providers.get(
                provider_name, self.tts_providers["elevenlabs"]
            )

            result = await provider.generate_voiceover(
                text=text,
                voice=voice,
                speed=request.get("speed", 1.0),
            )

            # Update job
            self.jobs[job_id].update(
                {
                    "status": "completed",
                    "result": result,
                }
            )

            return {
                "job_id": job_id,
                "status": "completed",
                "audio_url": result.get("audio_url"),
                "duration_ms": result.get("duration_ms", 0),
            }

        except Exception as e:
            logger.error("Voiceover generation failed", job_id=job_id, error=str(e))
            self.jobs[job_id]["status"] = "failed"
            self.jobs[job_id]["error"] = str(e)

            return {
                "job_id": job_id,
                "status": "failed",
                "error_message": str(e),
            }

    async def get_job_status(self, job_id: str) -> dict:
        """Get status of an audio generation job."""
        job = self.jobs.get(job_id)
        if not job:
            return {"job_id": job_id, "status": "not_found"}

        return {
            "job_id": job_id,
            "status": job["status"],
            "progress_percent": 100.0 if job["status"] == "completed" else 50.0,
            "error_message": job.get("error"),
        }


async def serve(port: int = 50053) -> None:
    """Run the audio service gRPC server."""
    if not GRPC_AVAILABLE:
        logger.error("gRPC not available. Cannot start audio service server.")
        return

    logger.info("Starting Audio Service", port=port)

    # Create service instance
    servicer = AudioServicer()

    # In production, this would register with the gRPC server using the generated
    # gRPC bindings, for example:
    #   audio_pb2_grpc.add_AudioServiceServicer_to_server(servicer, server)

    # Set up and start the gRPC server
    server = aio.server()
    server.add_insecure_port(f"[::]:{port}")

    logger.info("Starting gRPC server for Audio Service", port=port)
    await server.start()
    logger.info("Audio Service gRPC server started", port=port)

    try:
        # Wait until the server is terminated (e.g., via signal)
        await server.wait_for_termination()
    finally:
        logger.info("Shutting down Audio Service gRPC server", port=port)
        # Gracefully stop the server, allowing existing RPCs to finish
        await server.stop(grace=None)
def main():
    """Main entry point for audio service."""
    parser = argparse.ArgumentParser(description="Audio Service gRPC Server")
    parser.add_argument("--port", type=int, default=50053, help="gRPC port")
    args = parser.parse_args()

    asyncio.run(serve(args.port))


if __name__ == "__main__":
    main()
