"""
Avatar Service - gRPC service for AI avatar video generation

Handles all avatar-related AI integrations:
- HeyGen for video avatars with voice cloning
- D-ID for talking photos
- Synthesia for preset and custom avatars
- Elai for avatar customization with templates

This service exposes a gRPC interface for the Go API Gateway.
"""

import argparse
import asyncio
import uuid
from pathlib import Path
from typing import Optional

import structlog

logger = structlog.get_logger(__name__)

# gRPC imports (optional, gracefully handle if not installed)
try:
    import grpc  # noqa: F401 - imported for availability check
    from grpc import aio  # noqa: F401 - will be used when gRPC server is implemented

    GRPC_AVAILABLE = True
except ImportError:
    GRPC_AVAILABLE = False
    logger.warning("gRPC not available. Install with: pip install grpcio grpcio-tools")


class AvatarProvider:
    """Base class for avatar generation providers."""

    def __init__(self, api_key: Optional[str] = None):
        self.api_key = api_key

    async def generate(self, **kwargs) -> dict:
        """Generate avatar video."""
        raise NotImplementedError


class HeyGenProvider(AvatarProvider):
    """HeyGen AI avatar provider with voice cloning and custom avatars."""

    async def generate_avatar_video(
        self,
        script: str,
        avatar_id: Optional[str] = None,
        voice_id: Optional[str] = None,
        photo_url: Optional[str] = None,
        language: str = "en",
    ) -> dict:
        """
        Generate avatar video using HeyGen.
        
        Args:
            script: Text script for the avatar to speak
            avatar_id: ID of preset avatar (optional)
            voice_id: ID of voice for cloning (optional)
            photo_url: URL of photo to create avatar from (optional)
            language: Language code (default: en)
            
        Returns:
            Response dict with job_id, status, and video URL
        """
        logger.info(
            "HeyGenProvider generating",
            script_length=len(script),
            avatar_id=avatar_id,
            language=language,
        )
        # Placeholder - in production, call HeyGen API:
        # POST https://api.heygen.com/v2/video/generate
        # {
        #   "video_inputs": [{
        #     "character": {"type": "avatar", "avatar_id": avatar_id},
        #     "voice": {"type": "text", "input_text": script, "voice_id": voice_id},
        #     "background": {"type": "color", "value": "#FFFFFF"}
        #   }]
        # }
        
        return {
            "job_id": str(uuid.uuid4()),
            "status": "completed",
            "video_url": f"/output/avatars/heygen_{uuid.uuid4().hex[:8]}.mp4",
            "duration_ms": len(script) * 80,  # ~80ms per character
            "provider": "heygen",
        }

    async def upload_photo(self, photo_path: str) -> dict:
        """Upload photo to create custom avatar."""
        logger.info("HeyGenProvider uploading photo", photo_path=photo_path)
        # Placeholder - in production, upload to HeyGen
        return {
            "avatar_id": str(uuid.uuid4()),
            "status": "completed",
        }


class DIDProvider(AvatarProvider):
    """D-ID talking photos provider."""

    async def generate_talking_photo(
        self,
        photo_url: str,
        script: str,
        voice: str = "en-US-JennyNeural",
        driver_url: Optional[str] = None,
    ) -> dict:
        """
        Generate talking photo video using D-ID.
        
        Args:
            photo_url: URL or path to source photo
            script: Text for the avatar to speak
            voice: Voice ID for speech synthesis
            driver_url: Optional driver video URL for custom animations
            
        Returns:
            Response dict with job_id, status, and video URL
        """
        logger.info(
            "DIDProvider generating",
            script_length=len(script),
            voice=voice,
        )
        # Placeholder - in production, call D-ID API:
        # POST https://api.d-id.com/talks
        # {
        #   "script": {
        #     "type": "text",
        #     "input": script,
        #     "provider": {"type": "microsoft", "voice_id": voice}
        #   },
        #   "source_url": photo_url
        # }
        
        return {
            "job_id": str(uuid.uuid4()),
            "status": "completed",
            "video_url": f"/output/avatars/did_{uuid.uuid4().hex[:8]}.mp4",
            "duration_ms": len(script) * 80,
            "provider": "d-id",
        }

    async def list_voices(self) -> dict:
        """List available voices for D-ID."""
        logger.info("DIDProvider listing voices")
        # Placeholder - in production, fetch from D-ID API
        return {
            "voices": [
                {"id": "en-US-JennyNeural", "language": "en-US", "gender": "female"},
                {"id": "en-US-GuyNeural", "language": "en-US", "gender": "male"},
            ]
        }


class SynthesiaProvider(AvatarProvider):
    """Synthesia preset and custom avatar provider."""

    async def generate_video(
        self,
        script: str,
        avatar_id: str = "anna_costume1_cameraA",
        background: str = "green_screen",
        template_id: Optional[str] = None,
    ) -> dict:
        """
        Generate video using Synthesia avatars.
        
        Args:
            script: Text script for the avatar
            avatar_id: ID of Synthesia avatar
            background: Background type (green_screen, solid, etc.)
            template_id: Optional template ID for pre-designed layouts
            
        Returns:
            Response dict with job_id, status, and video URL
        """
        logger.info(
            "SynthesiaProvider generating",
            script_length=len(script),
            avatar_id=avatar_id,
        )
        # Placeholder - in production, call Synthesia API:
        # POST https://api.synthesia.io/v2/videos
        # {
        #   "input": [{
        #     "avatarSettings": {"avatar": avatar_id},
        #     "scriptText": script,
        #     "background": background
        #   }]
        # }
        
        return {
            "job_id": str(uuid.uuid4()),
            "status": "completed",
            "video_url": f"/output/avatars/synthesia_{uuid.uuid4().hex[:8]}.mp4",
            "duration_ms": len(script) * 80,
            "provider": "synthesia",
        }

    async def list_avatars(self) -> dict:
        """List available Synthesia avatars."""
        logger.info("SynthesiaProvider listing avatars")
        # Placeholder - in production, fetch from Synthesia API
        return {
            "avatars": [
                {"id": "anna_costume1_cameraA", "name": "Anna", "style": "professional"},
                {"id": "james_costume1_cameraA", "name": "James", "style": "casual"},
            ]
        }


class ElaiProvider(AvatarProvider):
    """Elai avatar customization and template provider."""

    async def render_video(
        self,
        script: str,
        avatar_style: str = "realistic",
        scene_template: Optional[str] = None,
        voice_url: Optional[str] = None,
    ) -> dict:
        """
        Render video using Elai with customization options.
        
        Args:
            script: Text script for the avatar
            avatar_style: Style of avatar (realistic, cartoon, 3d, anime)
            scene_template: Optional scene template ID
            voice_url: Optional custom voice file URL
            
        Returns:
            Response dict with job_id, status, and video URL
        """
        logger.info(
            "ElaiProvider rendering",
            script_length=len(script),
            avatar_style=avatar_style,
        )
        # Placeholder - in production, call Elai API:
        # POST https://api.elai.io/v1/render
        # {
        #   "slides": [{
        #     "avatar": {"style": avatar_style},
        #     "speech": {"text": script, "voiceUrl": voice_url},
        #     "template": scene_template
        #   }]
        # }
        
        return {
            "job_id": str(uuid.uuid4()),
            "status": "completed",
            "video_url": f"/output/avatars/elai_{uuid.uuid4().hex[:8]}.mp4",
            "duration_ms": len(script) * 80,
            "provider": "elai",
        }

    async def upload_asset(self, asset_path: str, asset_type: str) -> dict:
        """Upload custom asset (photo, audio, video) to Elai."""
        logger.info("ElaiProvider uploading asset", asset_path=asset_path, type=asset_type)
        # Placeholder - in production, upload to Elai
        return {
            "asset_id": str(uuid.uuid4()),
            "asset_url": f"/assets/{uuid.uuid4().hex[:8]}.{asset_type}",
            "status": "completed",
        }


class AvatarServicer:
    """
    Avatar Service gRPC Implementation.

    Handles avatar video generation requests from the Go API Gateway.
    Supports multiple AI avatar providers with fallback capabilities.
    """

    def __init__(self, output_dir: str = "./output"):
        self.output_dir = Path(output_dir)
        self.output_dir.mkdir(parents=True, exist_ok=True)

        # Initialize providers
        self.providers = {
            "heygen": HeyGenProvider(),
            "d-id": DIDProvider(),
            "synthesia": SynthesiaProvider(),
            "elai": ElaiProvider(),
        }

        # Job tracking
        self.jobs: dict[str, dict] = {}

        logger.info("AvatarServicer initialized", providers=list(self.providers.keys()))

    async def create_avatar_video(self, request: dict) -> dict:
        """
        Handle avatar video creation request.

        Args:
            request: Avatar video request with script, provider, settings.

        Returns:
            Avatar video response with job_id, status, and video URL.
        """
        job_id = str(uuid.uuid4())
        provider_name = request.get("provider", "heygen")
        script = request.get("script", "")

        logger.info(
            "AvatarServicer.create_avatar_video",
            job_id=job_id,
            provider=provider_name,
            script_length=len(script),
        )

        # Store job
        self.jobs[job_id] = {
            "status": "processing",
            "request": request,
            "type": "avatar_video",
            "created_at": asyncio.get_event_loop().time(),
        }

        try:
            provider = self.providers.get(provider_name)
            if not provider:
                raise ValueError(f"Unknown provider: {provider_name}")

            # Route to appropriate provider method
            if provider_name == "heygen":
                result = await provider.generate_avatar_video(
                    script=script,
                    avatar_id=request.get("avatar_id"),
                    voice_id=request.get("voice_id"),
                    photo_url=request.get("photo_url"),
                    language=request.get("language", "en"),
                )
            elif provider_name == "d-id":
                result = await provider.generate_talking_photo(
                    photo_url=request.get("photo_url", ""),
                    script=script,
                    voice=request.get("voice", "en-US-JennyNeural"),
                )
            elif provider_name == "synthesia":
                result = await provider.generate_video(
                    script=script,
                    avatar_id=request.get("avatar_id", "anna_costume1_cameraA"),
                    background=request.get("background", "green_screen"),
                    template_id=request.get("template_id"),
                )
            elif provider_name == "elai":
                result = await provider.render_video(
                    script=script,
                    avatar_style=request.get("avatar_style", "realistic"),
                    scene_template=request.get("scene_template"),
                    voice_url=request.get("voice_url"),
                )
            else:
                raise ValueError(f"Provider {provider_name} not supported")

            # Update job
            self.jobs[job_id].update(
                {
                    "status": "completed",
                    "result": result,
                }
            )

            return {
                "job_id": job_id,
                "status": "completed",
                "video_url": result.get("video_url"),
                "duration_ms": result.get("duration_ms", 0),
                "provider": result.get("provider"),
            }

        except Exception as e:
            logger.error("Avatar video creation failed", job_id=job_id, error=str(e))
            self.jobs[job_id]["status"] = "failed"
            self.jobs[job_id]["error"] = str(e)

            return {
                "job_id": job_id,
                "status": "failed",
                "error_message": str(e),
            }

    async def get_job_status(self, job_id: str) -> dict:
        """Get status of an avatar video generation job."""
        job = self.jobs.get(job_id)
        if not job:
            return {"job_id": job_id, "status": "not_found"}

        return {
            "job_id": job_id,
            "status": job["status"],
            "progress_percent": 100.0 if job["status"] == "completed" else 50.0,
            "error_message": job.get("error"),
        }

    async def upload_photo(self, provider_name: str, photo_data: bytes) -> dict:
        """Upload photo for avatar creation."""
        try:
            # Save photo temporarily
            photo_id = uuid.uuid4().hex[:8]
            photo_path = self.output_dir / f"photo_{photo_id}.jpg"
            photo_path.write_bytes(photo_data)

            provider = self.providers.get(provider_name)
            if not provider:
                raise ValueError(f"Unknown provider: {provider_name}")

            if provider_name == "heygen" and hasattr(provider, "upload_photo"):
                result = await provider.upload_photo(str(photo_path))
            elif provider_name == "elai" and hasattr(provider, "upload_asset"):
                result = await provider.upload_asset(str(photo_path), "jpg")
            else:
                raise ValueError(f"Provider {provider_name} does not support photo upload")

            return result

        except Exception as e:
            logger.error("Photo upload failed", provider=provider_name, error=str(e))
            return {"status": "failed", "error_message": str(e)}


async def serve(port: int = 50054) -> None:
    """Run the avatar service gRPC server."""
    if not GRPC_AVAILABLE:
        logger.error("gRPC not available. Cannot start avatar service server.")
        return

    logger.info("Starting Avatar Service", port=port)

    # Create service instance
    servicer = AvatarServicer()

    # In production, this would register with the gRPC server using the generated
    # gRPC bindings, for example:
    #   avatar_pb2_grpc.add_AvatarServiceServicer_to_server(servicer, server)

    # Set up and start the gRPC server
    server = aio.server()
    server.add_insecure_port(f"[::]:{port}")

    logger.info("Starting gRPC server for Avatar Service", port=port)
    await server.start()
    logger.info("Avatar Service gRPC server started", port=port)

    try:
        # Wait until the server is terminated (e.g., via signal)
        await server.wait_for_termination()
    finally:
        logger.info("Shutting down Avatar Service gRPC server", port=port)
        # Gracefully stop the server, allowing existing RPCs to finish
        await server.stop(grace=None)


def main():
    """Main entry point for avatar service."""
    parser = argparse.ArgumentParser(description="Avatar Service gRPC Server")
    parser.add_argument("--port", type=int, default=50054, help="gRPC port")
    args = parser.parse_args()

    asyncio.run(serve(args.port))


if __name__ == "__main__":
    main()
