"""
Video Service - gRPC service for video generation

Handles all video-related AI integrations:
- FLUX.1 for image generation
- Sora (OpenAI) for video generation
- Veo (Google) for video generation
- Runway for video editing and effects

This service exposes a gRPC interface for the Go API Gateway.
"""

import argparse
import asyncio
import uuid
from concurrent import futures
from pathlib import Path
from typing import Optional

import structlog

logger = structlog.get_logger(__name__)

# gRPC imports (optional, gracefully handle if not installed)
try:
    import grpc

    GRPC_AVAILABLE = True
except ImportError:
    GRPC_AVAILABLE = False
    logger.warning("gRPC not available. Install with: pip install grpcio grpcio-tools")


class VideoProvider:
    """Base class for video generation providers."""

    def __init__(self, api_key: Optional[str] = None):
        self.api_key = api_key

    async def generate(
        self,
        prompt: str,
        duration_seconds: int = 15,
        width: int = 1080,
        height: int = 1920,
    ) -> dict:
        """Generate video from prompt."""
        raise NotImplementedError


class FLUX1Provider(VideoProvider):
    """FLUX.1 image generation provider."""

    async def generate(
        self,
        prompt: str,
        duration_seconds: int = 15,
        width: int = 1080,
        height: int = 1920,
    ) -> dict:
        """Generate image using FLUX.1 (placeholder)."""
        logger.info("FLUX1Provider generating image", prompt=prompt[:50])
        # Placeholder - in production, call FLUX.1 API
        return {
            "job_id": str(uuid.uuid4()),
            "status": "completed",
            "output_url": f"/output/images/flux1_{uuid.uuid4().hex[:8]}.png",
            "provider": "flux1",
        }


class SoraProvider(VideoProvider):
    """OpenAI Sora video generation provider."""

    async def generate(
        self,
        prompt: str,
        duration_seconds: int = 15,
        width: int = 1080,
        height: int = 1920,
    ) -> dict:
        """Generate video using Sora (placeholder)."""
        logger.info("SoraProvider generating video", prompt=prompt[:50])
        # Placeholder - in production, call OpenAI Sora API
        return {
            "job_id": str(uuid.uuid4()),
            "status": "completed",
            "output_url": f"/output/videos/sora_{uuid.uuid4().hex[:8]}.mp4",
            "provider": "sora",
        }


class VeoProvider(VideoProvider):
    """Google Veo video generation provider."""

    async def generate(
        self,
        prompt: str,
        duration_seconds: int = 15,
        width: int = 1080,
        height: int = 1920,
    ) -> dict:
        """Generate video using Veo (placeholder)."""
        logger.info("VeoProvider generating video", prompt=prompt[:50])
        # Placeholder - in production, call Google Veo API
        return {
            "job_id": str(uuid.uuid4()),
            "status": "completed",
            "output_url": f"/output/videos/veo_{uuid.uuid4().hex[:8]}.mp4",
            "provider": "veo",
        }


class RunwayProvider(VideoProvider):
    """Runway video generation provider."""

    async def generate(
        self,
        prompt: str,
        duration_seconds: int = 15,
        width: int = 1080,
        height: int = 1920,
    ) -> dict:
        """Generate video using Runway (placeholder)."""
        logger.info("RunwayProvider generating video", prompt=prompt[:50])
        # Placeholder - in production, call Runway API
        return {
            "job_id": str(uuid.uuid4()),
            "status": "completed",
            "output_url": f"/output/videos/runway_{uuid.uuid4().hex[:8]}.mp4",
            "provider": "runway",
        }


class VideoServicer:
    """
    Video Service gRPC Implementation.

    Handles video generation requests from the Go API Gateway.
    """

    def __init__(self, output_dir: str = "./output"):
        self.output_dir = Path(output_dir)
        self.output_dir.mkdir(parents=True, exist_ok=True)

        # Initialize providers
        self.providers = {
            "flux1": FLUX1Provider(),
            "sora": SoraProvider(),
            "veo": VeoProvider(),
            "runway": RunwayProvider(),
        }

        # Job tracking
        self.jobs: dict[str, dict] = {}

        logger.info("VideoServicer initialized", providers=list(self.providers.keys()))

    async def render(self, request: dict) -> dict:
        """
        Handle video render request.

        Args:
            request: Video render request with prompt, style, duration, etc.

        Returns:
            Video render response with job_id, status, and output URL.
        """
        job_id = str(uuid.uuid4())
        logger.info(
            "VideoServicer.render", job_id=job_id, prompt=request.get("prompt", "")[:50]
        )

        # Store job
        self.jobs[job_id] = {
            "status": "processing",
            "request": request,
            "created_at": asyncio.get_event_loop().time(),
        }

        try:
            # Select provider (default to flux1 for images)
            provider_name = request.get("provider", "flux1")
            provider = self.providers.get(provider_name, self.providers["flux1"])

            # Generate
            result = await provider.generate(
                prompt=request.get("prompt", ""),
                duration_seconds=request.get("duration_seconds", 15),
                width=request.get("width", 1080),
                height=request.get("height", 1920),
            )

            # Update job
            self.jobs[job_id].update(
                {
                    "status": "completed",
                    "result": result,
                }
            )

            # Build thumbnail URL based on output type
            output_url = result.get("output_url", "")
            if output_url.endswith(".mp4"):
                thumbnail_url = output_url.replace(".mp4", "_thumb.jpg")
            elif output_url.endswith(".png"):
                thumbnail_url = output_url.replace(".png", "_thumb.jpg")
            else:
                thumbnail_url = output_url + "_thumb.jpg"

            return {
                "job_id": job_id,
                "status": "completed",
                "video_url": output_url,
                "thumbnail_url": thumbnail_url,
                "quality_score": 0.85,
                "processing_time_ms": 1000,
            }

        except Exception as e:
            logger.error("Video render failed", job_id=job_id, error=str(e))
            self.jobs[job_id]["status"] = "failed"
            self.jobs[job_id]["error"] = str(e)

            return {
                "job_id": job_id,
                "status": "failed",
                "error_message": str(e),
            }

    async def get_job_status(self, job_id: str) -> dict:
        """Get status of a video render job."""
        job = self.jobs.get(job_id)
        if not job:
            return {"job_id": job_id, "status": "not_found"}

        return {
            "job_id": job_id,
            "status": job["status"],
            "progress_percent": 100.0 if job["status"] == "completed" else 50.0,
            "error_message": job.get("error"),
        }

    async def cancel_job(self, job_id: str) -> dict:
        """Cancel a pending video render job."""
        job = self.jobs.get(job_id)
        if not job:
            return {"success": False, "message": "Job not found"}

        if job["status"] == "completed":
            return {"success": False, "message": "Job already completed"}

        self.jobs[job_id]["status"] = "cancelled"
        return {"success": True, "message": "Job cancelled"}


async def serve(port: int = 50052) -> None:
    """Run the video service gRPC server."""
    if not GRPC_AVAILABLE:
        logger.error("gRPC not available. Cannot start video service server.")
        return

    logger.info("Starting Video Service", port=port)

    # Create service instance
    servicer = VideoServicer()

    # In production, this would register with the gRPC server
    # For now, we'll just keep the service running
    logger.info("Video Service ready", port=port)

    # Keep the service running
    while True:
        await asyncio.sleep(3600)


def main():
    """Main entry point for video service."""
    parser = argparse.ArgumentParser(description="Video Service gRPC Server")
    parser.add_argument("--port", type=int, default=50052, help="gRPC port")
    args = parser.parse_args()

    asyncio.run(serve(args.port))


if __name__ == "__main__":
    main()
